--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -23,7 +23,7 @@
   </h3>
 
   <ul>
-    <% @course.teaches.reject!(&:new_record?).each do |teach| %>
+    <% @course.teaches.to_a.reject!(&:new_record?).each do |teach| %>
       <li><%= link_to_if can?(:read, teach), teach.to_s, teach %></li>
     <% end %>
   </ul>
