--- a/app/views/dashboard/headmaster.html.erb
+++ b/app/views/dashboard/headmaster.html.erb
@@ -35,7 +35,7 @@
             </h5>
           </div>
 
-          <% unless grade.courses.reject!(&:new_record?).blank? %>
+          <% unless grade.courses.to_a.reject!(&:new_record?).blank? %>
             <ul>
               <% grade.courses.reload.each do |course| %>
                 <li><%= link_to_if can?(:read, course), course.to_s, [grade, course] %></li>
